fix: make dpkg/apt aware of installed python packages
This fixes an issue where calling "craftctl" in a scriptlet would fail with a
ModuleNotFoundError for craft_parts. This happened when the snapcraft project
included build-packages that pulled in libpython3.10-minimal.

The reason that this failed is because in Rockcraft the `python` plugin (used
to build the `snapcraft` part) works by adding a custom "sitecustomize.py" in
`/usr/lib/python3.10/` to add the part's Python libraries to the Python path.
This is fine unless the `libpython3.10-minimal` package is explicitly installed
later on a container created from the rock, because that package has its own
sitecustomize.py file which overwrites Rockcraft's.

The solution is to make apt and dpkg aware that all of these Python-related
packages are already installed in the rock, by adding the dependency explicitly
as an `overlay-package`. This also has the extra beneficial side-effect of
improving installation of build-packages because dpkg/apt are aware of the
installed packages and don't have to download and re-install them unnecessarily.

Fixes #33.

--- a/tests/spread/general/craftctl/snap/snapcraft.yaml
+++ b/tests/spread/general/craftctl/snap/snapcraft.yaml
@@ -11,14 +11,21 @@ build-base: SNAPCRAFT_BUILD_BASE
 parts:
   hello:
     plugin: nil
+    build-packages:
+      # Note: We add this package explicitly here to make sure that the
+      # declaration of Python build packages does not clobber the existing
+      # Python installation (with Snapcraft libraries).
+      - python3-venv
     override-pull: |
       echo -e "#!/usr/bin/env bash\necho hello" > hello.sh
       chmod +x hello.sh
       craftctl get grade | grep devel
       craftctl set version="22"
       craftctl set grade=stable
+      craftctl default
     override-build: |
       craftctl get version | grep 22
       craftctl get grade | grep stable
+      craftctl default
       echo "This is the build step"
       cp hello.sh "$CRAFT_PART_INSTALL"/
